# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import storageRouter from "./storage";
 import songsRouter from "./songs";
+import repositoryRouter from "./repository";
 import contactRouter from "./contact";
 import newsletterRouter from "./newsletter";
 import authRouter from "./auth";
@@ -14,6 +15,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(storageRouter);
 router.use(songsRouter);
+router.use(repositoryRouter);
 router.use(contactRouter);
 router.use(newsletterRouter);
 router.use(authRouter);
